# Ansib-eL

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  agent_system.py  ansib_el.py  cli.py  demo.py  dogfood.py  dogfood_report.json  git_wrapper.py  orchestrator.py  pyproject.toml  requirements.txt  test_git_wrapper.py  tournament.py  trust_lineage.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: api-reference.md  architecture.md  cli-reference.md  getting-started.md
docs/concepts/: decision-lineage.md  tournament-mode.md  trust-and-reputation.md
src/ansibel/: __init__.py  agent_system.py  ansib_el.py  cli.py  exceptions.py  git_wrapper.py  orchestrator.py  tournament.py  trust_lineage.py
tests/: conftest.py  test_agent_system.py  test_ansib_el.py  test_cli.py  test_git_wrapper.py  test_orchestrator.py  test_tournament.py  test_trust_lineage.py
tests/integration/: test_full_workflow.py  test_git_operations.py
